refactor: improve test conventions and consistency